   - EntryPage: have an extended filter (todo #733).

 Bug fixes:

   - myIDialog: fix focus issue when running 'maybe_non_modal()' (todo #1355).
   - myIGridlist: fix behavior when there is no header (todo #1373).
   - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
   - Recurrent: fix periodicity details count.

 Other changes:

   - myIGridList: has new 'my-row-changed' signal (todo #1371).
   - my_igridlist_add_row(): add user data argument.
   - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
   - my_igridlist_remove_row(): new function.
   - my_igridlist_set_has_row_number(): new function.
   - my_igridlist_set_has_up_down_buttons: new function.
   - my_stamp_compare(): new function.
   - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
   - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
   - ofa_itvcolumnable_get_column_type(): new function.
   - ofa_itvcolumnable_get_menu_label(): new function.
   - ofo_entry_get_abr_from_status(): new function.
   - Periodicity properties: review UI margins (todo #1366).

-----------------------------------------------------------------------
 Version 0.67
 ============

 Released on 2017-02-21

 Total files count:    790
 Total lines count: 524542

 New features and improvements:

   Core DB Model v35
   Recurrent DB Model v8
   VAT DB Model v7

   - Let the user records any document with any table (todo #1263).
   - Have new keyboard shortcuts for import/export assistants.
   - Account selection does not allow deletion anymore (todo #1349).
   - Accounts are now settleable and reconciliable, and able to allow keeping
     unsettleable and unreconciliable entries.
   - Accounts chart: display the newly created page when creating an account with new class.
   - Accounts treeview: indicators are now centered in the column.
   - Administrative credentials are now recorded as dossier settings.